@@ -1,3 +1,9 @@
+2005-03-06  Daniel Jacobowitz  <dan@debian.org>
+
+	* linux-nat.c (child_follow_fork): Call target_terminal_ours before
+	printing output.  Use fprintf_unfiltered.  Only print output when
+	debugging.
+
 2005-03-05  Mark Kettenis  <kettenis@janacek.sibelius.xs4all.nl>
 
 	* sparc64-tdep.c (sparc64_store_floating_fields): Constify third
